--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
+    "moment-timezone": "^0.5.46",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
